force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Crypto_Key__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Key__c</fullName>
    <description>Setting containing the default Crypto Key used to encrypt and decrypt the record id.</description>
    <inlineHelpText>Setting containing the default Crypto Key used to encrypt and decrypt the record id. This can be replaced if required.</inlineHelpText>
    <label>Crypto Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>