force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Enforce_Login__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting to enforce Attendees to log in to events to track attendance</description>
    <inlineHelpText>Select this checkbox to enforce Attendees to log in to events to track attendance.</inlineHelpText>
    <label>Enforce Login</label>
    <type>Checkbox</type>
</CustomField>