force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Email_Address__c</fullName>
    <description>It contains the sender email id of the event invitation email.</description>
    <inlineHelpText>Enter a valid email address for the sender email for the event invitation email.</inlineHelpText>
    <label>From Email Address</label>
    <type>TextArea</type>
</CustomField>