force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/HD_Video__c.field-meta.xml
<CustomField>
    <fullName>HD_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defaults video resolution to HD video</description>
    <inlineHelpText>Select this checkbox to enable HD video</inlineHelpText>
    <label>HD Video</label>
    <type>Checkbox</type>
</CustomField>