force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Host_Video__c.field-meta.xml
<CustomField>
    <fullName>Host_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting to start the video when the host joins the webinar</description>
    <inlineHelpText>Select this checkbox to start the video when the host joins the webinar</inlineHelpText>
    <label>Host Video</label>
    <type>Checkbox</type>
</CustomField>