force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Join_Before_Host__c.field-meta.xml
<CustomField>
    <fullName>Join_Before_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows participants to join before the host</description>
    <inlineHelpText>Select this checkbox to allow participants to join before the host</inlineHelpText>
    <label>Join Before Host</label>
    <type>Checkbox</type>
</CustomField>