force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Maximum_Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Meeting_Duration__c</fullName>
    <description>It contains the value (minutes) for maximum meeting duration</description>
    <inlineHelpText>Enter the number of minutes for the maximum meeting duration (e.g. 120)</inlineHelpText>
    <label>Maximum Meeting Duration (In Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>