force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Minimum_Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Meeting_Duration__c</fullName>
    <description>It contains the value (minutes) for minimum meeting duration</description>
    <inlineHelpText>Enter the number of minutes for the minimum meeting duration (e.g. 15)</inlineHelpText>
    <label>Minimum Meeting Duration (In Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>