force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Oauth_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Account_Id__c</fullName>
    <description>The Account Id from the Zoom Server-To-Server OAuth App.</description>
    <inlineHelpText>Enter the Account Id from the Zoom Server-To-Server OAuth App.</inlineHelpText>
    <label>Oauth Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>