force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Oauth_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Client_Id__c</fullName>
    <description>The Client Id from the Zoom Server-To-Server OAuth App.</description>
    <inlineHelpText>Enter the Client Id from the Zoom Server-To-Server OAuth App.</inlineHelpText>
    <label>Oauth Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>