force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Oauth_client_secret__c.field-meta.xml
<CustomField>
    <fullName>Oauth_client_secret__c</fullName>
    <label>Oauth Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>