force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Oauth_Connection__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting enables the Oauth connection to Zoom. Disable this setting to disconnect the Oauth connection to Zoom.</description>
    <inlineHelpText>Enables the Oauth connection to Zoom. Disables the Oauth connection to Zoom.</inlineHelpText>
    <label>Oauth Connection</label>
    <type>Checkbox</type>
</CustomField>