force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Panelist_Video__c.field-meta.xml
<CustomField>
    <fullName>Panelist_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting to start the video when panelists join the webinar</description>
    <inlineHelpText>Select this checkbox to start the video when panelists join the webinar</inlineHelpText>
    <label>Panelist Video</label>
    <type>Checkbox</type>
</CustomField>