force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Send_Thank_you_email_notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Thank_you_email_notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sends a Thank Thank you email notification at the end of the event.</description>
    <inlineHelpText>Select this checkbox to send a Thank Thank you email notification at the end of the event.</inlineHelpText>
    <label>Send Thank you email notification</label>
    <type>Checkbox</type>
</CustomField>