force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <description>The site URL which is used to accept or decline the event invitation email  (e.g - https://datacoladasfzoom-developer-edition.ap5.force.com/).</description>
    <inlineHelpText>Enter the site URL which is used to accept or decline the event invitation email (e.g - https://datacoladasfzoom-developer-edition.ap5.force.com/).</inlineHelpText>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>