force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_Account_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Account_User_Id__c</fullName>
    <description>Setting Containing the Zoom Account User Id, which is populated during Zoom Server-To-Server OAuth connection.</description>
    <inlineHelpText>Setting Containing the Zoom Account User Id, which is populated during Zoom Server-To-Server OAuth connection.</inlineHelpText>
    <label>Zoom Account User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>