force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_API_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Zoom_API_Page_Size__c</fullName>
    <defaultValue>&quot;100&quot;</defaultValue>
    <description>Setting that specifies the number of records to return per page in the API response.</description>
    <inlineHelpText>Setting that specifies the number of records to return per page in the API response.</inlineHelpText>
    <label>Zoom API Page Size</label>
    <length>3</length>
    <type>Text</type>
</CustomField>