force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_Integration_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Integration_User_Email__c</fullName>
    <description>The Zoom Account (Profile) User&apos;s Email address for whom meeting/webinar needs to be created.</description>
    <inlineHelpText>Enter the Zoom Account (Profile) User&apos;s Email address for whom meeting/webinar needs to be created.</inlineHelpText>
    <label>Zoom Integration User Email</label>
    <type>Email</type>
</CustomField>