force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_URL__c.field-meta.xml
<CustomField>
    <fullName>Zoom_URL__c</fullName>
    <description>The Zoom org URL (e.g. https://zoom.us/)</description>
    <inlineHelpText>Enter the Zoom org URL (e.g. https://zoom.us/)</inlineHelpText>
    <label>Zoom URL</label>
    <type>Url</type>
</CustomField>