force-app/main/default/objects/Zoom_Configuration_Settings__c/fields/Zoom_Webhook_Secret_Token__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Webhook_Secret_Token__c</fullName>
    <description>The Secret Token from the Zoom Server-To-Server OAuth App. Used to verify event notifications sent by Zoom</description>
    <inlineHelpText>Enter the Secret Token from the Zoom Server-To-Server OAuth App. Used to verify event notifications sent by Zoom</inlineHelpText>
    <label>Zoom Webhook Secret Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>